# Postgrustql

./: .gitignore  Cargo.toml  README.md  Rocket.toml
databasefeed/: index.js  package.json  run.bash
requestable/: Cargo.toml
requestable/src/: lib.rs
src/: Untitled-1.json  database.rs  graphql_config.rs  main.rs  rocket_config.rs
src/database/: functions.rs  mod.rs  models.rs
src/graphql/: context.rs  mod.rs  mutations.rs  queries.rs  schema.rs  types.rs
