[package]
name = "gardenly-flowers"
version = "0.1.0"
authors = ["Raphaeël <raphou007@hotmail.fr>"]
edition = "2018"

[dependencies]
serde = "1.0.2"
serde_json = "1.0.2"
serde_derive = "1.0.2"
juniper = "0.11"
juniper_rocket = "0.2"
rocket ="0.4.0"
postgres = "0.15.2"
tokio = "0.1"
lazy_static = "1.3"
strum_macros = "0.15"
r2d2 = "0.8.4"
r2d2_postgres = "0.14.0"