[package]
name = "gardenly-flowers"
version = "0.1.0"
authors = ["Raphaeël <raphou007@hotmail.fr>"]
edition = "2018"

[workspace]
members = ["requestable"]

[dependencies]
requestable = { path = "./requestable" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.12"
juniper_rocket = "0.3"
rocket ="0.4"
tokio = "0.1"
lazy_static = "1.3"
postgres = { features = ["with-uuid"], version= "0.15.2"}
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
uuid = "0.7"