[package]
name = "gardenly-flowers"
version = "0.1.0"
authors = ["Raphaeël <raphou007@hotmail.fr>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
juniper = "0.12"
juniper_rocket = "0.3"
rocket ="0.4"
tokio = "0.1"
lazy_static = "1.3"
postgres = { features = ["with-uuid"], version= "0.15.2"}
uuid = "0.7"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
dotenv = "0.14"